  * Add starpu_task_expected_length_average and
    starpu_task_expected_energy_average.
  * Add STARPU_SIMGRID_TASK_PUSH_COST environment variable.
  * Add starpu_memory_nodes_get_count_by_kind and
    starpu_memory_node_get_ids_by_type.
  * Add STARPU_MPI_REDUX_ARITY_THRESHOLD to tune the type of tree used in
    distributed-memory reduction patterns that are automatically detected.

Changes:
  * The redux codelet should expose the STARPU_COMMUTE flag, since StarPU
    actually uses commutability.
  * Rename STARPU_COMM_STATS environment variable to STARPU_MPI_STATS
  * Function starpu_data_lookup has been removed, it is now up to the
    calling code to manage a ptr-to-handle reverse lookup table when
    needed.
  * Cluster is renamed in parallel worker but keep the old API as
    deprecated
  * Removed pop_every_task scheduler method, unused since long.

Small changes:
  * starpu_mpi_task_insert() returns -ENODEV if no worker is available
    on the node which is to execute the codelet (the other nodes do
    not return -ENODEV)
  * Add a synthetic energy efficiency testcase.
  * Make reduction methods want the commute flag.
  * Delete old MIC driver code
  * Rename
    - starpu_conf::sched_policy_init to starpu_conf::sched_policy_callback
    and
    - starpu_sched_ctx_get_sched_policy_init() to starpu_sched_ctx_get_sched_policy_callback()
    as the callback function may not only be used for init purposes
  * Change the default value for configure option --enable-maxcpus to
    auto. it allows StarPU to automatically use the number of CPUs
    on the build machine.
  * New option --worker for tool starpu_machine_display to only
    display workers of a specific type
  * Remove the unused and untested mpi_ms_funcs field.
  * The home_node parameter of the register_data_handle method is turned from
    unsigned to int, to explicit that it may be -1.
  * Value 0 for STARPU_MPI_NDETACHED_SEND and STARPU_MPI_NREADY_PROCESS will
    now disable their behaviour.