@@ -279,6 +279,7 @@ myPROGRAMS +=				\
 	datawizard/increment_init		\
 	datawizard/increment_redux		\
 	datawizard/increment_redux_v2		\
+	datawizard/increment_redux_with_args	\
 	datawizard/increment_redux_lazy		\
 	datawizard/handle_to_pointer		\
 	datawizard/lazy_allocation		\
@@ -589,6 +590,22 @@ datawizard_increment_redux_v2_SOURCES +=		\
 endif
 if STARPU_USE_OPENCL
 datawizard_increment_redux_v2_SOURCES +=		\
+	variable/increment_opencl.c
+endif
+
+datawizard_increment_redux_with_args_SOURCES =		\
+	datawizard/increment_redux_with_args.c		\
+	variable/increment.c
+if STARPU_USE_CUDA
+datawizard_increment_redux_with_args_SOURCES +=		\
+	variable/increment_cuda.cu
+endif
+if STARPU_USE_HIP
+datawizard_increment_redux_with_args_SOURCES +=		\
+	variable/increment_hip.hip
+endif
+if STARPU_USE_OPENCL
+datawizard_increment_redux_with_args_SOURCES +=		\
 	variable/increment_opencl.c
 endif
 
